fix bug on mobile display

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -481,9 +481,7 @@ section {
         position: relative;
         width: 100%;
         height: 100%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+        object-fit: cover;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -563,6 +561,7 @@ textarea {
 #ms-form {
     display: none;
     position: fixed;
+    height: 100vh;
     top: 0;
     left: 0;
     width: 100%;
@@ -570,6 +569,7 @@ textarea {
     background-color: rgba(var.surface_color(12%), 0.3);
     backdrop-filter: blur(5px);
     z-index: 5;
+    overflow-y: scroll;
 
     form {
         position: relative;
@@ -580,9 +580,9 @@ textarea {
         align-items: center;
         border-radius: 10px;
         background-color: var.surface_color(18%);
-        top: 50%;
+        top: 50px;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translateX(-50%);
     
         textarea {
             width: 100%;
