--- a/css/main.css
+++ b/css/main.css
@@ -764,9 +764,7 @@ section {
   position: relative;
   width: 100%;
   height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  object-fit: cover;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -840,6 +838,7 @@ textarea {
 #ms-form {
   display: none;
   position: fixed;
+  height: 100vh;
   top: 0;
   left: 0;
   width: 100%;
@@ -847,6 +846,7 @@ textarea {
   background-color: rgba(49, 49, 49, 0.3);
   backdrop-filter: blur(5px);
   z-index: 5;
+  overflow-y: scroll;
 }
 #ms-form form {
   position: relative;
@@ -857,9 +857,9 @@ textarea {
   align-items: center;
   border-radius: 10px;
   background-color: #404040;
-  top: 50%;
+  top: 50px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
 }
 #ms-form form textarea {
   width: 100%;
